[tool.poetry]
name = "wizwad"
version = "0.4.1"
description = ""
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StarrFox/wizwad"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
more-itertools = ">=8.14,<10.0"

[tool.poetry.scripts]
wizwad = "wizwad.__main__:main"

[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
mypy = ">=0.982,<1.2"

[tool.poetry.group.tools.dependencies]
scalene = "^1.5.16"

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedFunction = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
